account-service-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: josueveliz/account-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
