tracking-service-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
        - name: tracking-service
          image: josueveliz/tracking-service
          ports:
            - containerPort: 3000
